--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div id="cookies-msg" class="accept-cookies">
+        Accept cookies
+    </div>
+
     <a href="#" id="clicker">Clicker</a>
     <div id="purple-box" class="purple-box">
         <div>Call ASNA for help! </div>
