--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="cookies-msg" class="accept-cookies">
-        Accept cookies
+        <div>
+            Accept cookies
+        </div>
     </div>
 
     <a href="#" id="clicker">Clicker</a>
