refactor and start dim

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div>x</div>
     <div>x</div>
+    <button id="my-button">Hello</button>
     <div>x</div>
     <div>x</div>
     <div>x</div>
